solc_mutator_ossfuzz_seed_corpus/test_sol/test_24f55103a1667b3d9dc126e093f7d992bb23ee993bd5174b8f97791e067c2eb0_d0affb01ed9a2b8e7bc255254f3e2f4a5f9e00a2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
bytes30 constant cons0 = bytes30(0x000000000000000000000000000000000000000000000000000000000000);
struct St0 {
  string el0;
  address payable el1;
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
function f0(bool i0,bool i1)     returns(function (uint200) external   returns (bool) o0,bytes21 o1,function (bytes29) external   returns (uint80, bytes22) o2)
{
  require(o0({i0: uint200((uint200(int200(((int200(0) + int200(431572755568152235079251986199479266381129653444332698434620)) / int200(803469022129495137770981046170581301261101496891396417650687)))) / uint200(1454801014559296287345439649082696539689361515553878340408854)))}), string("471ab44c6398e04dd92eca27b03736376f37ba9cfa492d857d515b3e65738dfeffffffffffffffffffffffffffffffffffffffffffff"));
}
// ----
// TypeError 4974: (su1.sol:198-464): Named argument "i0" does not match function declaration.
